--- a/assets/jx.html
+++ b/assets/jx.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>>阿晨算法解析系统 - 一键解析</title>
+    <title>阿晨算法解析系统 - 一键解析</title>
     <link rel="icon" href="./img/logo.ico" type="image/x-icon">
     <style>
       * {
