--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 							<h2 class="chtitle"><span>相关资源</span></h2>
 							<!-- 相关资源 -->
 
-							<a href="https://a.212001.xyz/jxdh" target="_blank"><div class="item"><div class="avatar"> <img src="./assets/img/zfj.png"> </div>
-							<div class="inner"><h5>解析导航</h5></div></div></a>
+							<a href="https://a.212001.xyz/jx" target="_blank"><div class="item"><div class="avatar"> <img src="./assets/img/zfj.png"> </div>
+							<div class="inner"><h5>解析系统</h5></div></div></a>
 							
 							<a href="http://z.qiqiv.cn/" target="_blank"><div class="item"><div class="avatar"> <img src="./assets/img/tnb.png"> </div>
 							<div class="inner"><h5>配置编辑器</h5></div></div></a>
