--- a/jx/index.html
+++ b/jx/index.html
@@ -37,7 +37,7 @@
 					<div class="header-right">
 						<ul class="header-links">
 
-							<li class="header-links-item"><a href="https://v.212001.xyz/-">更多</a></li>
+							<li class="header-links-item"><a href="https://a.212001.xyz/jxdh/">解析导航</a></li>
 						</ul>
 					</div>
 				</header>
